# cudss_permute

./: CMakeLists.txt  README.md
.github/workflows/: Ubuntu.yml  Windows.yml
cmake/: AutoDetectCudaArch.cmake  cudss.cmake
data/: Fennec_Fox_A.mtx  dragon_A.mtx  rocker-arm_A.mtx  spot_A.mtx
test_cudss/: CMakeLists.txt  main.cu  matrix_market_reader.h  metis_permute.h  residual.h  util.h
